--- a/index.html
+++ b/index.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
     <style>
-        body, html {
-            margin: 0;
-            padding: 0;
+        /* This container hides the Google Drive UI */
+        .video-wrapper {
+            position: relative;
             width: 100%;
-            height: 100%;
-            background: transparent; /* Or #000 */
-            overflow: hidden;
+            height: 100vh;
+            overflow: hidden; /* This clips the Google buttons */
+            background: #000;
         }
-        video {
+
+        /* The iframe is made slightly larger to push the UI off-screen */
+        iframe {
+            position: absolute;
+            top: -60px;    /* Hides the top bar */
+            left: -10px;
+            width: calc(100% + 20px);
+            height: calc(100% + 120px); /* Hides the bottom bar */
+            border: none;
+        }
+
+        /* This invisible layer prevents clicking the video */
+        .click-shield {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover; /* This makes it fill the card/screen */
-            pointer-events: none; /* Prevents users from clicking/pausing it */
+            z-index: 10;
+            cursor: default;
         }
     </style>
 </head>
 <body>
 
-    <video id="v" autoplay muted loop playsinline>
-        <source src="https://www.googleapis.com/drive/v3/files/1AJ5mUC--flx2QPFCPAkA_1pceo5zpmQg?alt=media" type="video/webm">
-    </video>
+    <div class="video-wrapper">
+        <div class="click-shield"></div>
+        <iframe 
+            src="https://drive.google.com/file/d/1AJ5mUC--flx2QPFCPAkA_1pceo5zpmQg/preview?autoplay=1" 
+            allow="autoplay">
+        </iframe>
+    </div>
 
-    <script>
-        // Force the video to start even if the browser tries to pause it
-        const vid = document.getElementById('v');
-        vid.play().catch(() => {
-            // If autoplay fails, it tries again every 1 second until it works
-            const retry = setInterval(() => {
-                vid.play().then(() => clearInterval(retry));
-            }, 1000);
-        });
-    </script>
 </body>
 </html>
