--- a/index.html
+++ b/index.html
@@ -2,46 +2,27 @@
 <html>
 <head>
     <style>
-        /* This container hides the Google Drive UI */
-        .video-wrapper {
-            position: relative;
-            width: 100%;
-            height: 100vh;
-            overflow: hidden; /* This clips the Google buttons */
-            background: #000;
-        }
-
-        /* The iframe is made slightly larger to push the UI off-screen */
-        iframe {
-            position: absolute;
-            top: -60px;    /* Hides the top bar */
-            left: -10px;
-            width: calc(100% + 20px);
-            height: calc(100% + 120px); /* Hides the bottom bar */
-            border: none;
-        }
-
-        /* This invisible layer prevents clicking the video */
-        .click-shield {
-            position: absolute;
-            top: 0;
-            left: 0;
+        body, html { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #000; }
+        video {
             width: 100%;
             height: 100%;
-            z-index: 10;
-            cursor: default;
+            object-fit: cover; /* Fills the space perfectly */
+            pointer-events: none; /* User can't click to pause */
         }
     </style>
 </head>
 <body>
 
-    <div class="video-wrapper">
-        <div class="click-shield"></div>
-        <iframe 
-            src="https://drive.google.com/file/d/1AJ5mUC--flx2QPFCPAkA_1pceo5zpmQg/preview?autoplay=1" 
-            allow="autoplay">
-        </iframe>
-    </div>
+    <video autoplay muted loop playsinline id="bgVideo">
+        <source src="media/animation.webm" type="video/webm">
+        <source src="media/animation.mp4" type="video/mp4"> </video>
 
+    <script>
+        // This ensures it starts even if the browser is stubborn
+        const v = document.getElementById('bgVideo');
+        v.play().catch(() => {
+            console.log("Autoplay waiting for interaction");
+        });
+    </script>
 </body>
 </html>
