--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <title>Drive Video Iframe</title>
     <style>
-        body, html { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #000; }
-        video {
+        body, html {
+            margin: 0;
+            padding: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Fills the space perfectly */
-            pointer-events: none; /* User can't click to pause */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #000;
+            overflow: hidden;
+        }
+        /* Style for the iframe to ensure it shows at the size you specified */
+        iframe {
+            border: none;
         }
     </style>
 </head>
 <body>
 
-    <video autoplay muted loop playsinline id="bgVideo">
-        <source src="media/animation.webm" type="video/webm">
-        <source src="media/animation.mp4" type="video/mp4"> </video>
+    <iframe 
+        src="https://drive.google.com/file/d/1S-wxQWsoYA6D7DmLeIDg6Ssm2kZu97Cb/preview" 
+        width="640" 
+        height="480">
+    </iframe>
 
-    <script>
-        // This ensures it starts even if the browser is stubborn
-        const v = document.getElementById('bgVideo');
-        v.play().catch(() => {
-            console.log("Autoplay waiting for interaction");
-        });
-    </script>
 </body>
 </html>
