--- a/index.html
+++ b/index.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Drive Video Iframe</title>
     <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #000;
+        /* 1. The Container: This acts as the "Clipper" */
+        .video-clipper {
+            width: 640px;  /* Match your desired width */
+            height: 360px; /* Shorter than 480 to hide the top/bottom bars */
             overflow: hidden;
+            position: relative;
+            background: #000;
+            border-radius: 8px;
         }
-        /* Style for the iframe to ensure it shows at the size you specified */
-        iframe {
+
+        /* 2. The Iframe: Positioned to push UI out of view */
+        .video-clipper iframe {
+            position: absolute;
+            top: -65px;    /* Pushes the Google Title bar UP out of view */
+            left: -5px;
+            width: 650px;  /* Slightly wider to hide side shadows */
+            height: 520px; /* Taller to ensure the bottom bar is pushed DOWN */
             border: none;
+        }
+
+        /* 3. The Instruction Layer (Optional) */
+        .hint {
+            color: white;
+            font-family: sans-serif;
+            text-align: center;
+            margin-top: 10px;
         }
     </style>
 </head>
 <body>
 
-    <iframe 
-        src="https://drive.google.com/file/d/1S-wxQWsoYA6D7DmLeIDg6Ssm2kZu97Cb/preview" 
-        width="640" 
-        height="480">
-    </iframe>
+    <div class="video-clipper">
+        <iframe src="https://drive.google.com/file/d/1S-wxQWsoYA6D7DmLeIDg6Ssm2kZu97Cb/preview"></iframe>
+    </div>
+
+    <p class="hint">Click inside the box to play animation</p>
 
 </body>
 </html>
